[package]
name = "jungle"
version = "0.1.1"
authors = ["Carson Page <carson.page@xmicrowave.com>"]
description = "A fast, safe Tree Library in rust."

readme = "README.md"
keywords = ["tree", "safe", "fast"]
license = "Apache-2.0/MIT"

repository    = "https://github.com/memchk/jungle-rs"
documentation = "https://docs.rs/jungle"
[dependencies]
generic-array = "0.5.1"

[profile.test]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
panic = 'unwind'